force-app/main/default/objects/Global_Object_Validation__c/Global_Object_Validation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Control whether validation rules for an individual object are active or not. For example, if object name is Account add the following line to each validation rule for the Account object: $Setup.Global_Object_Validation__c.Account_Active__c &amp;&amp; ......</description>
    <label>Global Object Validation</label>
</CustomObject>