force-app/main/default/objects/Global_Object_Validation__c/fields/Account_Validations_Active__c.field-meta.xml
<CustomField>
    <fullName>Account_Validations_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Account Validations Active</label>
    <type>Checkbox</type>
</CustomField>