force-app/main/default/objects/Global_Object_Validation__c/fields/Contact_Validations_Active__c.field-meta.xml
<CustomField>
    <fullName>Contact_Validations_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Contact Validations Active</label>
    <type>Checkbox</type>
</CustomField>