force-app/main/default/objects/Global_Object_Validation__c/fields/Daily_Sales_Validations_Active__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sales_Validations_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily Sales Validations Active</label>
    <type>Checkbox</type>
</CustomField>