force-app/main/default/objects/Global_Object_Validation__c/fields/Deal_Validations_Active__c.field-meta.xml
<CustomField>
    <fullName>Deal_Validations_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether validation rules for Deals are active.</description>
    <inlineHelpText>Controls whether validation rules for Deals are active.</inlineHelpText>
    <label>Deal Validations Active</label>
    <type>Checkbox</type>
</CustomField>