force-app/main/default/objects/Global_Object_Validation__c/fields/Edit_Closed_Deals__c.field-meta.xml
<CustomField>
    <fullName>Edit_Closed_Deals__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if the user/profile edit closed deals</inlineHelpText>
    <label>Edit Closed Deals</label>
    <type>Checkbox</type>
</CustomField>