force-app/main/default/objects/Global_Object_Validation__c/fields/Group_Booking_Validations_Active__c.field-meta.xml
<CustomField>
    <fullName>Group_Booking_Validations_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Group Booking Validations Active</label>
    <type>Checkbox</type>
</CustomField>