force-app/main/default/objects/Global_Object_Validation__c/fields/Marketing_Activity_Validations_Active__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity_Validations_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Marketing Activity Validations Active</label>
    <type>Checkbox</type>
</CustomField>