force-app/main/default/objects/Global_Object_Validation__c/fields/Unit_Validations_Active__c.field-meta.xml
<CustomField>
    <fullName>Unit_Validations_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Unit Validations Active</label>
    <type>Checkbox</type>
</CustomField>